--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,11 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="shortcut icon"
+      href="public/assets/favicon.svg"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <div id="root"></div>
