--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     />
     <link
       rel="shortcut icon"
-      href="public/assets/favicon.svg"
+      href="public/assets/favicon.ico"
       type="image/x-icon"
     />
   </head>
