changed favicon and favicon path, added horizontal margin to Carousel header to align with content, fixed path to Favourites in BurgerMenu

--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,9 @@
     />
     <link
       rel="shortcut icon"
-      href="public/assets/favicon.ico"
-      type="image/x-icon"
+      href="%PUBLIC_URL%/assets/favicon.svg"
+      type="image/svg+xml"
+
     />
   </head>
   <body>
