--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Gadgets shop. Phones, tablets, and accessories for you."
+    />
     <title>Product Catalog</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,7 +16,7 @@
     />
     <link
       rel="shortcut icon"
-      href="public/assets/favicon.ico"
+      href="%PUBLIC_URL%/assets/favicon.ico"
       type="image/x-icon"
     />
   </head>
